# shakey

./: .gitignore  Cargo.toml  build.rs  commands.yaml  config.yaml  env_var.md  templates.yaml
src/: config.rs  data.rs  env.rs  ext.rs  get_fields.rs  github.rs  global.rs  helix.rs  lib.rs  main.rs  message.rs  ser.rs  serde.rs  spotify.rs  testing.rs  twilight.rs  util.rs
src/data/: file_types.rs  helpers.rs  interest.rs  mod.rs  save.rs  save_file.rs  watch.rs  watch_file.rs
src/env/: env_vars.rs  mod.rs  secret.rs
src/handler/: arguments.rs  bind.rs  callable.rs  mod.rs  outcome.rs  replier.rs  reply.rs  response.rs
src/irc/: lower.rs  message.rs  mod.rs  proto.rs
src/irc/proto/: errors.rs
src/modules/: another_viewer.rs  builtin.rs  crates.rs  help.rs  mod.rs  shakespeare.rs  spotify.rs  twitch.rs  user_defined.rs  vscode.rs
src/templates/: environment.rs  macros.rs  mod.rs  parsed.rs  variant.rs  verify.rs
src/twilight/: message.rs  mod.rs  state.rs
