[package]
name = "shakey"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[dependencies]
alto_logger      = "0.4.0"
anyhow           = "1.0.62"
async-trait      = "0.1.57"
fastrand         = "1.8.0"
fastrand_ext     = { git = "https://github.com/museun/fastrand_ext", version = "0.1.0" }
heck             = "0.4.0"
log              = "0.4.17"
once_cell        = "1.13.1"
parking_lot      = "0.12.1"
pin-project-lite = "0.2.9"
regex            = "1.6.0"
reqwest          = { version = "0.11.11", features = ["json"] }
rspotify         = { version = "0.11.5", features = ["cli"] }
serde            = { version = "1.0.144", features = ["derive"] }
serde_json       = "1.0.85"
serde_yaml       = "0.9.10"
simple_env_load  = "0.2.0"
time             = { version = "0.3.14", features = ["formatting", "parsing", "macros", "local-offset", "serde"] }
tokio            = { version = "1.20.1", features = ["rt", "sync", "fs", "macros", "io-util", "net", "parking_lot"] }

[build-dependencies]
indoc = "1.0.7"
time = { version = "0.3.14", features = ["formatting", "parsing", "local-offset"] }
