[package]
name = "shakey"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[dependencies]
alto_logger      = "0.4.0"
anyhow           = "1.0.63"
async-trait      = "0.1.57"
fastrand         = "1.8.0"
fastrand_ext     = { git = "https://github.com/museun/fastrand_ext", version = "0.1.0" }
flume            = { version = "0.10.14", default-features = false, features = ["async"] }
heck             = "0.4.0"
log              = "0.4.17"
once_cell        = "1.13.1"
parking_lot      = "0.12.1"
pin-project-lite = "0.2.9"
regex            = "1.6.0"
reqwest          = { version = "0.11.11", features = ["json"] }
# TODO get rid of this, we only need 1 function from it
rspotify         = { version = "0.11.5", features = ["cli"] }
serde            = { version = "1.0.144", features = ["derive"] }
serde_json       = "1.0.85"
serde_yaml       = "0.9.10"
simple_env_load  = "0.2.0"
time             = { version = "0.3.14", features = ["formatting", "parsing", "macros", "local-offset", "serde"] }
tokio            = { version = "1.20.1", features = ["rt", "sync", "fs", "macros", "io-util", "net", "parking_lot"] }
tokio-stream     = "0.1.9"
twilight-gateway = "0.13.0"
twilight-http    = "0.13.0"
twilight-model   = "0.13.2"
uuid             = { version = "1.1.2", features = ["v4", "serde"] }

[build-dependencies]
indoc = "1.0.7"
time = { version = "0.3.14", features = ["formatting", "parsing", "local-offset"] }
